exercise01/output.txt
exercise01$ g++ zehri.cpp 
zehri.cpp: In function ‘int main()’:
zehri.cpp:20:5: error: ‘menu’ was not declared in this scope; did you mean ‘manu’?
   20 |     menu();
      |     ^~~~
      |     manu
exercise01$ 
